[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/website_panel.gd" type="Script" id=1]
[ext_resource path="res://icons/back_icon.svg" type="Texture" id=2]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://tools/vertical_button.gd" type="Script" id=4]
[ext_resource path="res://icons/internet_icon.svg" type="Texture" id=5]
[ext_resource path="res://icons/code_icon.svg" type="Texture" id=6]
[ext_resource path="res://icons/help_icon.svg" type="Texture" id=7]
[ext_resource path="res://icons/book_icon.svg" type="Texture" id=8]
[ext_resource path="res://icons/language_icon.svg" type="Texture" id=9]
[ext_resource path="res://icons/bug_icon.svg" type="Texture" id=10]
[ext_resource path="res://icons/construction_icon.svg" type="Texture" id=11]
[ext_resource path="res://icons/chat_icon.svg" type="Texture" id=12]
[ext_resource path="res://icons/news_icon.svg" type="Texture" id=13]

[node name="WebsitePanel" type="PopupPanel"]
margin_right = 620.0
margin_bottom = 660.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 612.0
margin_bottom = 620.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 612.0
margin_bottom = 608.0
size_flags_horizontal = 3
columns = 3

[node name="WebsiteButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_right = 202.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 5 )
vertical_text = "Website"
font_override = ExtResource( 3 )

[node name="SourceCodeButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 206.0
margin_right = 407.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 6 )
vertical_text = "Source Code"
font_override = ExtResource( 3 )

[node name="DocumentationButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 411.0
margin_right = 612.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 8 )
vertical_text = "Documentation"
font_override = ExtResource( 3 )

[node name="FAQButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 204.0
margin_right = 202.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 7 )
vertical_text = "FAQ"
font_override = ExtResource( 3 )

[node name="NewsButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 206.0
margin_top = 204.0
margin_right = 407.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 13 )
vertical_text = "News"
font_override = ExtResource( 3 )

[node name="CommunityButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 411.0
margin_top = 204.0
margin_right = 612.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 12 )
vertical_text = "Community"
font_override = ExtResource( 3 )

[node name="TranslationsButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 408.0
margin_right = 202.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 9 )
vertical_text = "Translations"
font_override = ExtResource( 3 )

[node name="ReportIssueButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 206.0
margin_top = 408.0
margin_right = 407.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 10 )
vertical_text = "Report Issue"
font_override = ExtResource( 3 )

[node name="ContributeButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 411.0
margin_top = 408.0
margin_right = 612.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 4 )
texture = ExtResource( 11 )
vertical_text = "Contribute"
font_override = ExtResource( 3 )

[node name="BackButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 612.0
margin_bottom = 660.0

[node name="BackButton" type="Button" parent="VBoxContainer/BackButtonContainer"]
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Back"
icon = ExtResource( 2 )
expand_icon = true

[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/WebsiteButton" to="." method="_on_WebsiteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/SourceCodeButton" to="." method="_on_SourceCodeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/DocumentationButton" to="." method="_on_DocumentationButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/FAQButton" to="." method="_on_FAQButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/NewsButton" to="." method="_on_NewsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/CommunityButton" to="." method="_on_CommunityButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/TranslationsButton" to="." method="_on_TranslationsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/ReportIssueButton" to="." method="_on_ReportIssueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/ContributeButton" to="." method="_on_ContributeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
